# ocaml-ppx_deriving_json_lib

./: ppx_deriving_json_lib.descr  ppx_deriving_json_lib.opam
src/: .merlin  jbuild  ppx_deriving_json.cppo.ml
src_runtime/: .merlin  jbuild
