opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: [ "whitequark <whitequark@whitequark.org>" "Steve Bleazard <stevebleazard@googlemail.com>" ]
homepage: "https://github.com/stevebleazard/ocaml-ppx_deriving_json_lib"
license: "MIT"
doc: "http://stevebleazard.github.io/ocaml-ppx_deriving_json_lib"
bug-reports: "https://github.com/stevebleazard/ocaml-ppx_deriving_json_lib/issues"
dev-repo: "git://github.com/stevebleazard/ocaml-ppx_deriving_json_lib.git"
tags: [ "syntax" "json" ]
substs: [ "pkg/META" ]
build: [
  "ocaml" "pkg/build.ml" "native=%{ocaml-native}%"
                         "native-dynlink=%{ocaml-native-dynlink}%"
]
build-test: [
  "ocamlbuild" "-classic-display" "-use-ocamlfind"
    "src_test/test_ppx_json_lib.byte" "--"
]
depends: [
  "result"
  "ppx_deriving" {>= "4.0" & < "5.0"}
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "cppo" {build}
  "ppxfind" {build}
  "cppo_ocamlbuild" {build}
  "ounit"        {test}
  "ppx_import"   {test & >= "1.1"}
]
