opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: [ "whitequark <whitequark@whitequark.org>" "Steve Bleazard <stevebleazard@googlemail.com>" ]
homepage: "https://github.com/stevebleazard/ocaml-ppx_deriving_json_lib"
bug-reports: "https://github.com/stevebleazard/ocaml-ppx_deriving_json_lib/issues"
license: "MIT"
dev-repo: "git://github.com/stevebleazard/ocaml-ppx_deriving_json_lib.git"
doc: "http://stevebleazard.github.io/ocaml-ppx_deriving_json_lib"
tags: [ "syntax" "json" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "result"
  "ppx_deriving" {>= "4.0" & < "5.0"}
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "cppo" {build}
  "ppxfind" {build}
  "cppo_ocamlbuild" {build}
  "ounit"        {test}
  "ppx_import"   {test & >= "1.1"}
]
